Updated mentor roles

--- a/pages/about.html
+++ b/pages/about.html
@@ -198,7 +198,7 @@
           <div id="mentor-container">
             <img id="mentor-picture" src="../assets/lalamoro.jpg" alt="">
             <hr class="lines">
-            <span>University President</span> 
+            <span>University Adminstrator</span> 
           </div>
         </div>
 
@@ -229,7 +229,7 @@
           <div id="mentor-container">
             <img id="mentor-picture" src="../assets/marcellana.jpg" alt="">
             <hr class="lines">
-            <span>University President</span> 
+            <span>Dean of Academic Programs</span> 
           </div>
         </div>
 
@@ -260,7 +260,7 @@
           <div id="mentor-container">
             <img id="mentor-picture" src="../assets/macaraig.jpg" alt="">
             <hr class="lines">
-            <span>University President</span> 
+            <span>Dean of Academic Affairs</span> 
           </div>
         </div>
       </section>
