--- a/pages/about.html
+++ b/pages/about.html
@@ -60,13 +60,14 @@
 
         <!-- Details -->
         <div class="details-container">
-          <div class="details-grid">
+          <div class="details-grid details-explore">
             <span class="details-title">Educators & Staff</span>
             <hr class="lines details-hr" />
             <img
               src="../assets/news-image.png"
               alt=""
               class="important-imgs"
+              id="important-educators-img"
             />
             <p class="details-descriptions">
               They bring together years of academic expertise, industry
@@ -75,7 +76,7 @@
               supporters, ensuring that every student receives the knowledge,
               skills, and encouragement needed to succeed.
             </p>
-            <a class="details-links" href=""><i class="fa-solid fa-arrow-right"></i> Learn More</a>
+            <a class="details-links" href="" id="educators-staff-link"><i class="fa-solid fa-arrow-right"></i> Learn More</a>
           </div>
           <div class="details-grid" id="programs">
             <span class="details-title">Programs</span>
@@ -91,9 +92,9 @@
               <li>College of Arts & Humanities</li>
               <li>College of Science, Technology, and Engineering</li>
             </ul>
-            <a class="details-links"><i class="fa-solid fa-arrow-right"></i> Learn More</a>
+            <a class="details-links" id="programs-link"><i class="fa-solid fa-arrow-right"></i> Learn More</a>
           </div>
-          <div class="details-grid">
+          <div class="details-grid details-explore">
             <span class="details-title">Facilities</span>
             <hr class="lines details-hr">
             <div class="facilities-imgs">
@@ -103,14 +104,14 @@
               <img class="important-imgs" src="../assets/events-image.png" alt="">
             </div>
             <p class="details-descriptions">Our university is equipped with modern, student-centered facilities designed to support both academic excellence and personal growth. From state-of-the-art laboratories and fully equipped libraries to collaborative learning spaces and digital resource centers, students have access to everything they need to succeed.</p>
-            <a class="details-links"><i class="fa-solid fa-arrow-right"></i> Learn More</a>
+            <a class="details-links" id="facilities-link"><i class="fa-solid fa-arrow-right"></i> Learn More</a>
           </div>
         </div>
 
         <!-- Mentors -->
         <hr class="hr-rule">
-        <div id="mentor-jadi">
-          <center><span class="title">Academic Mentors</span></center>
+        <div class="mentor-class" id="mentor-jadi">
+          <center><span class="title" id="academic-mentors-id">Academic Mentors</span></center>
           <p>Jadi David Libardo</p>
           <p>President, Five Pillars University</p>
           <p class="mentor-characteristics">Credentials and Academic Background</p>
@@ -141,7 +142,7 @@
         </div>
 
         <hr class="hr-rule">
-        <div id="mentor-jadi">
+        <div class="mentor-class" id="mentor-jadi">
           <p>Elieson Loplop</p>
           <p>Vice President, Five Pillars University</p>
           <p class="mentor-characteristics">Credentials and Academic Background</p>
@@ -172,7 +173,7 @@
         </div>
 
         <hr class="hr-rule">
-        <div id="mentor-jadi">
+        <div class="mentor-class" id="mentor-jadi">
           <p>Justine Mark Lalamoro</p>
           <p>Administrator, Five Pillars University</p>
           <p class="mentor-characteristics">Credentials and Academic Background</p>
@@ -203,7 +204,7 @@
         </div>
 
         <hr class="hr-rule">
-        <div id="mentor-jadi">
+        <div class="mentor-class" id="mentor-jadi">
           <p>Marc Matthew Marcellana</p>
           <p>Dean of Academic Programs, Five Pillars University</p>
           <p class="mentor-characteristics">Credentials and Academic Background</p>
@@ -234,7 +235,7 @@
         </div>
 
         <hr class="hr-rule">
-        <div id="mentor-jadi">
+        <div class="mentor-class" id="mentor-jadi">
           <p>Ivan James Macaraig</p>
           <p>Dean of Academic Affairs, Five Pillars University</p>
           <p class="mentor-characteristics">Credentials and Academic Background</p>
@@ -263,7 +264,153 @@
             <span>Dean of Academic Affairs</span> 
           </div>
         </div>
+
+        <!-- Extension page -->
+        <hr class="hr-rule">
+        <div id="program-text-container">
+          <p id="title-program">Pathways of Knowledge</p>
+          <p class="information">
+            <span class="indent-paragraph"> At Five Pillars University,
+            education is built on strong foundations that go beyond textbooks and
+            classrooms. Our offered programs serve as guiding principles, shaping
+            well-rounded individuals who are prepared for the challenges of
+            tomorrow. Each pillar reflects our commitment to academic excellence,
+            personal growth, and meaningful contributions to society.
+            </span>
+            <br />
+            <br />
+            <span class="indent-paragraph"> Through these pillars, we
+            ensure that every program, course, and experience nurtures not only
+            knowledge but also character, creativity, and a lifelong passion for
+            learning.
+            </span>
+          </p>
+          <p class="program-title">College of Arts & Humanities</p>
+          <ul>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Communication
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Creative Writing
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Philosophy
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Sociology
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Political Science
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Language and Literature
+            </li>
+          </ul>
+          <p class="program-title">
+            College of Science, Technology, and Engineering
+          </p>
+          <ul>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Communication
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Creative Writing
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Philosophy
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Sociology
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Political Science
+            </li>
+            <li class="bullet-information">
+              ● Bachelor of Arts in Language and Literature
+            </li>
+          </ul>
+          <div id="program-end">
+            <p id="end-title">Start Building Your Journey</p>
+            <a href="#" id="link">⟶ Apply to the Five Pillar University Program</a>
+          </div>
+        </div>
+
+        <hr class="hr-rule" id="spaces-future-hr">
+        <div id="facility-page">
+          <div id="facility-page-container">
+            <p id="title-facility">Our Spaces, Your Future</p>
+            <p class="information">
+              <span class="indent-paragraph">Step Five Pillars University, where every facility is thoughtfully designed to support learning, foster creativity, and nurture the growth of future leaders. Our modern classrooms are equipped with the latest technology, enabling dynamic and interactive learning experiences. Innovative laboratories provide students with hands-on opportunities to experiment, discover, and apply their knowledge in real-world scenarios.</span>
+              <br>
+              <br>
+              <span class="indent-paragraph">Collaborative</span> spaces across the campus encourage teamwork, idea-sharing, and interdisciplinary projects, helping students develop critical thinking, problem-solving, and leadership skills. Beyond academics, our campus offers areas for relaxation, wellness, and creative expression, ensuring a balanced environment where students can thrive both intellectually and personally. At Five Pillars University, every corner is built to inspire, empower, and prepare students to reach their fullest potential.
+            </p>
+
+            <!-- Lecture Halls Images -->
+            <div id="lecture-hall-container-one">
+              <img
+                src="/assets/lecture_hall_1.png"
+                alt="Lecture Hall Picture"
+                id="lecture_hall_one"
+              />
+              <img
+                src="/assets/lecture_hall_2.png"
+                alt="Lecture Hall Picture"
+                id="lecture-hall-two"
+              />
+            </div>
+            <center class="content-title">
+              <span>Lecture Halls</span>
+              <span>Engineering hall, communication hall, and Finance hall.</span>
+            </center>
+            <div id="lecture-hall-container-two">
+              <img
+                src="/assets/lecture_hall_3.png"
+                alt="Lecture Hall Picture"
+                id="lecture-hall-three"
+              />
+              <img
+                src="/assets/lecture_hall_4.png"
+                alt="Lecture Hall Picture"
+                id="lecture-hall-four"
+              />
+            </div>
+
+            <hr class="hr-rule">
+            <div id="wellness-facilities-container-one">
+              <img
+                src="/assets/wellness_1.png"
+                alt="Track Field Picture"
+                id="wellness-facility-one"
+              />
+              <img
+                src="/assets/wellness_2.png"
+                alt="Gymnasium"
+                id="wellness-facility-two"
+              />
+            </div>
+
+            <center class="content-title">
+              <span>Wellness Facilities</span>
+              <span>Gymnasium, Track field, Clinic, and Counseling Room</span>
+            </center>
+
+            <div id="wellness-facilities-container-two">
+              <img
+                src="/assets/wellness_3.png"
+                alt="Counseling Room"
+                id="wellness-facility-three"
+              />
+              <img
+                src="/assets/Wellness_4.jpg"
+                alt="Clinic Room"
+                id="wellness-facility-four"
+              />
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+    <script src="../javascript/about.js"></script>
   </body>
 </html>
